--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-  <title>Mantis React Admin Dashboard</title>
+  <title>Strikers Gear Admin Dashboard</title>
   <link rel="icon" href="/favicon.svg" />
 
   <!-- Meta Tags-->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#1677ff" />
-  <meta name="title" content="Mantis - React Admin Dashboard Template by CodedThemes" />
+  <meta name="title" content="Strikers Gear - Admin Dashboard" />
   <meta name="description"
-    content="Start your next React project with Mantis admin template. It build with Reactjs, Material-UI, SWR, and Hook for faster web development." />
+    content="Strikers Gear admin dashboard for managing products, stock, orders, and inventory." />
   <meta name="keywords"
     content="react admin template, material-ui react dashboard template, reactjs admin template, reactjs dashboard, react backend template" />
   <meta name="author" content="CodedThemes" />
