Improve homepage design with hero background image and red overlay

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-  <title>Strikers Gear Admin Dashboard</title>
+  <title>Strikers Gear Football Shop Admin Dashboard</title>
   <link rel="icon" href="/favicon.svg" />
 
   <!-- Meta Tags-->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#1677ff" />
-  <meta name="title" content="Strikers Gear - Admin Dashboard" />
+  <meta name="title" content="Strikers Gear - Football Shop Admin Dashboard" />
   <meta name="description"
-    content="Strikers Gear admin dashboard for managing products, stock, orders, and inventory." />
+    content="Strikers Gear admin dashboard for managing football cleats, grip socks and grippers, football jerseys, shin pads, socks, and other sports accessories." />
   <meta name="keywords"
-    content="react admin template, material-ui react dashboard template, reactjs admin template, reactjs dashboard, react backend template" />
+    content="Strikers Gear, football shop, football cleats, grip socks, football grippers, football jerseys, shin pads, football socks, sports accessories, sports shop admin, inventory management" />
   <meta name="author" content="CodedThemes" />
   <link rel="apple-touch-icon" href="/logo192.png" />
 
